--- a/index.html
+++ b/index.html
@@ -2,26 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>JupyterCAD & GIS Slides</title>
+    <link rel="icon" type="image/svg+xml" href="/astro.svg" />
+    <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="node_modules/reveal.js/dist/reveal.css" />
-    <link rel="stylesheet" href="node_modules/reveal.js/dist/theme/black.css" />
-    <link rel="stylesheet" href="node_modules/reveal.js/plugin/highlight/monokai.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Merriweather+Sans&display=swap" rel="stylesheet">
+    <title>QuantStack</title>
+    <style>
+    </style>
   </head>
   <body>
+    <script type="module" src="/src/main.ts"></script>
     <div class="reveal">
-      <div class="slides">
-        <section
-          data-markdown="slides.md"
-          data-separator="^---$"
-          data-separator-vertical="^\|\|\|$"
-          data-separator-notes="^Note:"
-          data-charset="utf-8"
-        ></section>
+		<div class="slides">
+
+        <section>
+          <h1>Expanding Programming Language Support in JupyterLite</h1>
+        </section>
+
+        <section data-markdown>
+          <textarea data-template>
+            ## Slide 1
+            A paragraph with some text and a [link](https://hakim.se).
+            ---
+            ## Slide 2
+            ---
+            ## Slide 3
+          </textarea>
+        </section>
+
       </div>
-    </div>
-    <img id="astronaut" src="/public/images/astronaut.svg" alt="Astronaut" />
-    <script type="module" src="/main.ts"></script>
+		</div>
   </body>
 </html>
