--- a/index.html
+++ b/index.html
@@ -17,18 +17,87 @@
     <div class="reveal">
 		<div class="slides">
 
+        <section data-background="src/images/abstract_main.jpg">
+          <h1 class="main-title">Expanding Programming Language Support in JupyterLite</h1>
+          <img src="/src/images/logo_scientific_computing.svg" alt="QuantStack Logo" class="title-logo">
+        </section>
+
+        <section data-markdown>
+          <textarea data-template>
+            ## Introduction
+            Who is this??
+          </textarea>
+        </section>
+
         <section>
-          <h1>Expanding Programming Language Support in JupyterLite</h1>
+          <img src="/src/images/cosmo_pkg.png" alt="QuantStack Logo" class="cosmo-img">
+          <h2 class="main-title">Introduction to Emscripten-Forge</h1>
+        </section>
+
+        <section>
+          <img src="/src/images/cosmo_victory.png" alt="QuantStack Logo" class="cosmo-img">
+          <h2 class="main-title">Xeus Kernels in JupyterLite</h1>
         </section>
 
         <section data-markdown>
           <textarea data-template>
             ## Slide 1
-            A paragraph with some text and a [link](https://hakim.se).
+            A paragraph with some text
             ---
             ## Slide 2
             ---
             ## Slide 3
+          </textarea>
+        </section>
+
+
+        <section>
+          <img src="/src/images/cosmo_rock.png" alt="QuantStack Logo" class="cosmo-img">
+          <h2 class="main-title">Packaging R for WebAssembly</h1>
+        </section>
+
+        <section data-markdown>
+          <textarea data-template>
+            ## Slide 1
+            A paragraph with some text
+            ---
+            ## Slide 2
+            ---
+            ## Slide 3
+          </textarea>
+        </section>
+
+
+        <section>
+          <img src="/src/images/cosmo_pkg_walk.png" alt="QuantStack Logo" class="cosmo-img">
+          <h2 class="main-title">Packaging GNU Octave for WebAssembly</h1>
+        </section>
+
+        <section>
+          <img src="/src/images/cosmo_fly.png" alt="QuantStack Logo" class="cosmo-img">
+          <h2 class="main-title">JupyterLite Terminal</h1>
+        </section>
+
+        <section data-markdown>
+          <textarea data-template>
+            ## Slide 1
+            A paragraph with some text
+            ---
+            ## Slide 2
+            ---
+            ## Slide 3
+          </textarea>
+        </section>
+
+        <section>
+          <img src="/src/images/cosmo_rocket.png" alt="QuantStack Logo" class="cosmo-img">
+          <h2 class="main-title">Thank You!</h1>
+        </section>
+
+        <section data-markdown>
+          <textarea data-template>
+            ## Resources
+            A paragraph with some text
           </textarea>
         </section>
 
