--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           </textarea>
         </section>
 
-        <section>
+        <section class="cosmo-slide">
           <img src="/src/images/cosmo_pkg.png" alt="QuantStack Logo" class="cosmo-img">
           <h2 class="main-title">Introduction to Emscripten-Forge</h1>
         </section>
 
-        <section>
+        <section class="cosmo-slide">
           <img src="/src/images/cosmo_victory.png" alt="QuantStack Logo" class="cosmo-img">
           <h2 class="main-title">Xeus Kernels in JupyterLite</h1>
         </section>
@@ -51,7 +51,7 @@
         </section>
 
 
-        <section>
+        <section class="cosmo-slide">
           <img src="/src/images/cosmo_rock.png" alt="QuantStack Logo" class="cosmo-img">
           <h2 class="main-title">Packaging R for WebAssembly</h1>
         </section>
@@ -68,12 +68,12 @@
         </section>
 
 
-        <section>
+        <section class="cosmo-slide">
           <img src="/src/images/cosmo_pkg_walk.png" alt="QuantStack Logo" class="cosmo-img">
           <h2 class="main-title">Packaging GNU Octave for WebAssembly</h1>
         </section>
 
-        <section>
+        <section class="cosmo-slide">
           <img src="/src/images/cosmo_fly.png" alt="QuantStack Logo" class="cosmo-img">
           <h2 class="main-title">JupyterLite Terminal</h1>
         </section>
@@ -89,7 +89,7 @@
           </textarea>
         </section>
 
-        <section>
+        <section class="cosmo-slide">
           <img src="/src/images/cosmo_rocket.png" alt="QuantStack Logo" class="cosmo-img">
           <h2 class="main-title">Thank You!</h1>
         </section>
