--- a/index.html
+++ b/index.html
@@ -142,19 +142,21 @@
   </div>
 </section>
 
-<section data-markdown>
-  <textarea data-template>
-    ### Xeus-Cpp-Lite Configuration
+<section>
+  <h3 style="font-size:2.2em; text-align:center;">
+    Xeus-Cpp-Lite Configuration
+  </h3>
 
+  <div style="text-align:center;">
     <img src="src/images/xeus-cpp-lite-configuration.png"
          alt="Xeus-Cpp-Lite configuration diagram"
          style="max-width:85%;border-radius:12px;box-shadow:0 8px 24px rgba(0,0,0,.25);margin-top:1em;"
          class="fragment fade-up"/>
+  </div>
 
-    <p style="font-size:0.9em; color:#555; margin-top:0.6em;" class="fragment fade-up">
-      Fig: Configuration flow for Xeus-Cpp-Lite in the browser
-    </p>
-  </textarea>
+  <p style="font-size:0.9em; color:#555; margin-top:0.6em;" class="fragment fade-up">
+    Fig: Configuration flow for Xeus-Cpp-Lite in the browser
+  </p>
 </section>
 
 <section data-markdown>
@@ -175,19 +177,19 @@
   </textarea>
 </section>
 
-<section data-markdown>
-  <textarea data-template>
-    <h2 style="font-size:2.5em; margin-bottom:0.8em; text-align:center; color:#222;">
-      Timeit Magic
-    </h2>
+<section>
+  <!-- Title -->
+  <h2 style="font-size:2.5em; margin-bottom:0.8em; text-align:center; color:#222;">
+    Timeit Magic
+  </h2>
 
-    <div style="text-align:center;">
-      <img src="src/images/timeit_latest.gif"
-           alt="Timeit magic demo"
-           style="max-width:100%; max-height:90vh; border-radius:10px; 
-                  box-shadow:0 4px 18px rgba(0,0,0,.25); margin:0 auto; display:inline-block;"/>
-    </div>
-  </textarea>
+  <!-- Image (timeit gif) -->
+  <div style="text-align:center;">
+    <img src="src/images/timeit_latest.gif"
+         alt="Timeit magic demo"
+         style="max-width:90%; max-height:90vh; display:inline-block; margin:0 auto;
+                border-radius:10px; box-shadow:0 4px 18px rgba(0,0,0,.25);" />
+  </div>
 </section>
 
 <section>
@@ -258,7 +260,7 @@ emcc custom_module.cpp \
   <div style="text-align:center;">
     <img src="src/images/dlopen.png"
          alt="dlopen flow"
-         style="max-width:100%; max-height:100vh; display:inline-block; margin:0 auto;
+         style="max-width:90%; max-height:90vh; display:inline-block; margin:0 auto;
                 border-radius:10px; box-shadow:0 8px 28px rgba(0,0,0,.25);" />
   </div>
 </section>
