--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 <section>
   <!-- Title -->
-  <h2 style="font-size:2.5em; margin-bottom:0.8em; text-align:center; color:#222;">
+  <h2 style="font-size:2.4em; font-weight:700; text-align:center; margin-bottom:0.6em;">
     Timeit Magic
   </h2>
 
@@ -187,8 +187,8 @@
   <div style="text-align:center;">
     <img src="src/images/timeit_latest.gif"
          alt="Timeit magic demo"
-         style="max-width:90%; max-height:90vh; display:inline-block; margin:0 auto;
-                border-radius:10px; box-shadow:0 4px 18px rgba(0,0,0,.25);" />
+         style="max-width:85%; max-height:75vh; display:inline-block; margin:0 auto;
+                border-radius:10px; box-shadow:0 8px 28px rgba(0,0,0,.25);" />
   </div>
 </section>
 
